fix for not align question and explanation

--- a/public/css/question.css
+++ b/public/css/question.css
@@ -161,7 +161,7 @@
   margin-bottom: 10px;
   padding: 10px;
   background-color: rgb(249, 249, 249);
-  max-width: 400px;
+  max-width: 500px;
   border: 0.5px solid #e6e6e6;
 }
 
@@ -183,7 +183,7 @@
   padding: 10px;
   background: #fff2e5;
   font-style: italic;
-  max-width: 400px;
+  max-width: 500px;
 }
 
 
